--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@solana/web3.js": "^0.71.9",
+    "@project-serum/serum": "file:../serum-ts/packages/serum",
+    "@safecoin/web3.js": "^1.29.3",
+    "@solana/buffer-layout": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "base64js": "^1.0.1",
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "bn.js": "^5.1.2",
     "bs58": "^4.0.1",
-    "buffer-layout": "^1.2.0",
     "immutable-tuple": "^0.4.10",
     "mdi-material-ui": "^6.17.0",
     "notistack": "^0.9.17",
@@ -21,7 +23,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "predeploy": "yarn build",
